Fix extra spacing after drop-cap

--- a/assets/shared/css/blocks/paragraph.css
+++ b/assets/shared/css/blocks/paragraph.css
@@ -3,11 +3,18 @@ p.has-background {
 	max-width: calc(var(--theme-max-w-base) - 60px);
 }
 
-.has-drop-cap:not(:focus)::first-letter {
-	color: hsl(var(--theme-color-heading));
-	font-size: var(--theme-dropcap--font-size);
-	font-weight: var(--theme-dropcap--weight);
-	line-height: 1;
-	margin: 0 0.275em -1px 0;
-	padding-top: 0;
+.has-drop-cap:not(:focus) {
+
+	&::first-letter {
+		color: hsl(var(--theme-color-heading));
+		font-size: var(--theme-dropcap--font-size);
+		font-weight: var(--theme-dropcap--weight);
+		line-height: 1;
+		margin: 0 0.275em -1px 0;
+		padding-top: 0;
+	}
+
+	&:after {
+		padding-top: 0;
+	}
 }
